--- a/index.html
+++ b/index.html
@@ -8,19 +8,28 @@
 
 <body>
   first Assignments
-<a href="first.html" target="blank"">first</a>
+<a href="1.1.html" target="blank"">first</a>
 <br />
 
   second Assignments
-<a href="second.html" target="blank"">second</a>
+<a href="1.2.html" target="blank"">second</a>
 <br /> 
   3 Assignments
-  <a href="3.html" target="blank">3</a>
+  <a href="1.3.html" target="blank">3</a>
 <br />
   4 Assignments
-  <a href="4.html" target="blank">4</a>
+  <a href="1.4.html" target="blank">4</a>
 <br />
-  
-</body>
 
+  2.1-2-3-4-5 Assignments
+  <a href="2.1-2-3-4-5.html" target="blank">2.1-2-3-4-5</a>
+     <br>
+  2.6 Assignments
+  <a href="2.6.html" target="blank">2.6</a>
+  <br />
+  2.7 Assignments
+  <a href="2.7.html" target="blank">2.7</a><br />
+  3.1 Assignments
+  <a href="3.1.html" target="blank">3.1</a>
+</body>
 </html>
