--- a/3.1.html
+++ b/3.1.html
@@ -12,7 +12,7 @@
     My name is <blood>Rayan serawan</blood>
   </p>
   <p>
-      I am <strong>Available</strong> 
+      I am <strong>Available</strong> 1
   </p>
 </body>
 
